# omnibot-TMR

./: .gitignore  LICENSE  README.md  enviroment.yaml  enviroment.yml  main.py  requirements.txt
calibration/: hough.py  hsv.py
communication/: README.md  __init__.py  code.txt  serial_comm.py
computer-vision/: imgTest.py  vidTest.py
computer-vision/entities/: Bean.py  Tree.py
computer-vision/utils/: kmeans.py  results.py
computer_vision/: README.md  __init__.py
computer_vision/detection/: __init__.py  object_detector.py
computer_vision/tracking/: __init__.py  tracker.py
computer_vision/utils/: __init__.py  image_utils.py
config/: robot_config.yaml
control/: CMakeLists.txt  code.txt  mcpwm_bdc_control_example_main.c
docs/: architecture.md
model/train/: results.csv
robot_control/: README.md
robot_control/actuators/: __init__.py  motor_controller.py
robot_control/motion/: __init__.py  omni_drive.py
robot_control/sensors/: __init__.py  sensor_interface.py
test/: cameraTest.py  getImage.py  imageTest.py  videoTest.py
test/utils/: beans.py
tests/: test_computer_vision.py  test_robot_control.py
